# cs4180-project

./: .gitignore  README.md  agent.py  checkpoint_poker_100000.pt  checkpoint_poker_1k.pt  env.py  main.ipynb  main.py  play.py  pyproject.toml
data_backups/: 8x256_100000_data.npz
data_backups/folding_modelks/: 10000_data.npz  32x1024_100000_data.npz  8x256_gamma1_100000_data.npz
models/: checkpoint_poker_8x256_100000.pt  checkpoint_poker_bug_fix_1500000.pt  checkpoint_poker_more_bug_fix_1500000.pt  checkpoint_poker_with_allstocks_visible_with_allstocks_visible__1500000.pt
models/folding_models/: checkpoint_poker_10000.pt  checkpoint_poker_1500000.pt  checkpoint_poker_8x256_3000000.pt  checkpoint_poker_8x256_gamma1_100000.pt
