[tool.poetry]
name = "poker-agent"
version = "0.1.0"
description = "This is a poker agent which uses rienforcement learning to optimize its actions in poker"
authors = ["Charles Ciampa <ceciampa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
gymnasium = "^0.29.1"
numba = "^0.59.1"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
